tdf#146120 sw: show tracked table changes with different color

In Change Tracking, show deleted table rows in cyan and
inserted rows in pink. In this case, don't show original
table row or cell background.

Follow-up to commit f481c2c8e74bded11fac754e493560391229dbcd
"tdf#144057 sw track changes: hide deleted table rows".

Change-Id: Ib9cc411b62b92bc8a83dda7589f3e798f7e96f41